# Coh-wedge

./: .gitattributes  .gitignore  APE_TRUST_KERNEL.md  CHANGELOG.md  FORMAL_FOUNDATION.md  QUICKSTART.md  README.md  ROADMAP.md  SPEC_DIAGRAM.md  SYSTEM_SPEC.md  ape_cinematic_integrated.py  ape_demo_full.bat  ape_integrated_coh_funnel.py  ape_test_output.json  coh_funnel_cinematic.py  debug.txt  debug_output.txt  debug_output_cmd.txt  demo.bat  demo_full.bat  docker-compose.yml
Coh-wedge-master/ape/: Cargo.toml
Coh-wedge-master/ape/fixtures/: README.md  invalid_accounting.json  invalid_chain_digest.jsonl  invalid_schema.json  invalid_state_link.jsonl  overflow.json  valid_chain.jsonl  valid_micro.json
Coh-wedge-master/ape/output/: demo_e2e.json  dominance_results.json  strategy_demo_results.json
Coh-wedge-master/ape/src/: adapter.rs  fixtures.rs  main.rs  seed.rs
Coh-wedge-master/ape/src/strategies/: ai_failure_modes.rs  contradiction.rs  mod.rs  mutation.rs  overflow.rs  runtime.rs  violation.rs
Coh-wedge-master/ape/tests/: adversarial.rs
Coh-wedge-master/coh-node/crates/coh-sidecar/: Cargo.toml
coh-node/: .gitignore  COMPARISON.md  Cargo.toml  Dockerfile.sidecar  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_AUDIT_RUNBOOK.md  README.md  SYSTEM_ARCHITECTURE.md  WEDGE_CHECKLIST.md  coh.pyd  coh_sdk.py  demo_bridge.py  dynamics_data.json  dynamics_data_final.json  dynamics_data_fixed.json  dynamics_data_rigorous.json  execute_demo.bat  fix_examples.py  simulation_data.json  simulation_data_final.json  simulation_data_fixed.json  slab_output.json  visualize.html
coh-node/crates/coh-cli/: Cargo.toml
coh-node/crates/coh-cli/src/: main.rs
coh-node/crates/coh-cli/tests/: test_cli.rs  test_fixtures.rs
coh-node/crates/coh-core/: Cargo.toml  README.md
coh-node/crates/coh-core/benches/: execution_benchmarks.rs
coh-node/crates/coh-core/examples/: accuracy_test_suite.rs  benchmark.rs  benchmark_ai_demo.rs  benchmark_integrity.rs  comprehensive_benchmark.rs  enterprise_benchmark.rs  gccp_demo.rs  gen_adversarial_vectors.rs  gen_ai_fixtures.rs  integrity_demo_gen.rs  real_agent_integration.rs  showcase.rs  stress_test.rs
coh-node/crates/coh-core/src/: atom.rs  auth.rs  build_slab.rs  canon.rs  chain.rs  challenge.rs  cohbit.rs  errors.rs  execute.rs  fixtures.rs  fuzz.rs  hash.rs  lib.rs  math.rs  measurement.rs  merkle.rs  policy.rs  reject.rs  rv_kernel.rs  semantic.rs  slab.rs  tools.rs  trajectory_probability.rs  types.rs  vectors.rs  vectors_measurement.rs  verify_chain.rs  verify_micro.rs  verify_micro_v3.rs  verify_slab.rs
coh-node/crates/coh-core/tests/: physics_hierarchy_tests.rs  resource_demand_tests.rs  semantic_tests.rs  test_build_slab.rs  test_canon.rs  test_differential.rs  test_overflow.rs  test_property.rs  test_tamper.rs  test_valid_chain.rs  test_verify_chain.rs  test_verify_micro.rs  test_verify_slab.rs
coh-node/crates/coh-fuzz/: Cargo.toml
coh-node/crates/coh-fuzz/corpus/: seed_1.json
coh-node/crates/coh-fuzz/src/: main.rs
coh-node/crates/coh-gccp/: Cargo.toml
coh-node/crates/coh-gccp/src/: lib.rs  state.rs  verifier.rs
coh-node/crates/coh-genesis/: Cargo.toml  build.rs
coh-node/crates/coh-genesis/examples/: code_patch_demo.rs  code_patch_sweep.rs  coh_spinor_current.rs  cohbit_lean_governance.rs  cohbit_measurement_loop.rs  field_equation_governance_loop.rs  lean_governance_loop.rs  lean_proof_sweep.rs  lean_v3_pairwise_add_sweep.rs  lean_v3_stuck_theorem.rs  lean_v3_targeted_sweep.rs  npe_law_of_coherence_closure.rs  npe_law_of_genesis_closure.rs  npe_lean_closure_v0_2.rs  npe_rust_improves_lean_loop.rs  phaseloom_exists_lt_loop.rs  phaseloom_lean_loop.rs  phaseloom_pairwise_add_loop.rs  phaseloom_rebuild_pairwise_add_loop.rs  rational_inf_governance_loop.rs  run_npe_lean_phaseloom_package.rs  wildness_sweep.rs
coh-node/crates/coh-genesis/src/: atom.rs  candidate.rs  causal_cone.rs  code_patch.rs  fusion_wedge.rs  generator.rs  governor_tests.rs  kernel_invariants.rs  lean_failure_taxonomy.rs  lean_proof.rs  ledger.rs  lib.rs  (+8 more)
coh-node/crates/coh-npe/: Cargo.toml
coh-node/crates/coh-phaseloom/: Cargo.toml
coh-node/crates/coh-physics/: Cargo.toml
coh-node/crates/coh-python/: Cargo.toml
coh-node/crates/coh-sidecar/: Cargo.toml
coh-node/crates/coh-time/: Cargo.toml
coh-node/docs/: 00-purpose-and-scope.md  01-canonical-data-model.md  02-verifier-ordering.md  03-chain-and-slab-laws.md  04-merkle-challenge-flow.md  05-cli-usage.md  06-test-vectors.md  07-kernel-architecture.md  07-lean-to-rust-traceability.md  08-dashboard-integration.md  CASE_STUDY.md
coh-node/examples/: audit_hallucinated.jsonl  audit_honest.jsonl  bench_v1.json  chain_documented.jsonl  chain_invalid_digest.jsonl  chain_invalid_index.jsonl  chain_invalid_state.jsonl  chain_invalid_state_link.jsonl  chain_invalid_step_index.jsonl  chain_malformed.jsonl  chain_valid.jsonl  dominance_v1.json  execution_bench_v1.json  gen_ai_fixtures.rs  micro_invalid_digest.json  micro_invalid_policy.json  micro_valid.json  slab_final.json  slab_invalid_merkle.json  slab_invalid_policy.json  slab_invalid_summary.json  slab_valid.json
coh-node/examples/ai_demo/: ai_workflow_chain_invalid_state_link.jsonl  ai_workflow_chain_invalid_step_index.jsonl  ai_workflow_chain_valid.jsonl  ai_workflow_micro_invalid_digest.json  ai_workflow_micro_valid.json
coh-node/examples/integrations/: README.md
coh-node/scripts/: visualize_coh_dynamics.py
coh-node/tools/: regenerate_example_fixtures.py
coh-node/vectors/adversarial/: reject_chain_digest.jsonl  reject_edge_cases.jsonl  reject_numeric_parse.jsonl  reject_overflow.jsonl  reject_policy_violation.jsonl  reject_schema.jsonl  reject_state_link.jsonl  valid_chain.jsonl
coh-node/vectors/gccp/: reject_gccp_power_breach.jsonl  reject_gccp_temp_cap.jsonl  reject_gccp_throttle.jsonl  valid_gccp_power.jsonl  valid_gccp_priority.jsonl  valid_gccp_thermal.jsonl
coh-node/vectors/semi_realistic/: ai_workflow_noisy.jsonl  ai_workflow_valid.jsonl
coh-node/vectors/valid/: valid_chain_10.jsonl  valid_chain_100.jsonl  valid_chain_1000.jsonl
(+349 files in other folders)
