[workspace]
members = ["crates/coh-core", "crates/coh-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "LicenseRef-NoeticanLabs-Proprietary"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"
