[workspace]
members = [
    "crates/coh-core",
    "crates/coh-cli",
    "crates/coh-python",
    "crates/coh-sidecar",
    "crates/coh-fuzz",
    "crates/coh-time",
    "crates/coh-gccp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "LicenseRef-NoeticanLabs-Proprietary"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"
pythonize = "0.23"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = "0.5"
