[package]
name = "coh-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
thiserror.workspace = true

[[example]]
name = "verify_single"
path = "examples/verify_single.rs"

[[example]]
name = "verify_chain"
path = "examples/verify_chain.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"
