[package]
name = "coh-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
thiserror.workspace = true
colored.workspace = true

[[example]]
name = "verify_single"
path = "examples/verify_single.rs"

[[example]]
name = "verify_chain"
path = "examples/verify_chain.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

[[example]]
name = "gen_ai_fixtures"
path = "examples/gen_ai_fixtures.rs"

[[example]]
name = "benchmark_ai_demo"
path = "examples/benchmark_ai_demo.rs"

[[example]]
name = "showcase"
path = "examples/showcase.rs"
