[package]
name = "coh-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
thiserror.workspace = true
colored.workspace = true
ed25519-dalek = "2.1"
serde_jcs = "0.1"

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.5"
quickcheck = "1"
# Fuzzing dependencies
# libafl = "0.9"  # Uncomment when ready to use LibAFL
coh-time = { path = "../coh-time" }
coh-gccp = { path = "../coh-gccp" }

[[example]]
name = "verify_single"
path = "examples/verify_single.rs"

[[example]]
name = "verify_chain"
path = "examples/verify_chain.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"

[[example]]
name = "enterprise_benchmark"
path = "examples/enterprise_benchmark.rs"

[[example]]
name = "golden_fixture"
path = "examples/golden_fixture.rs"

[[bench]]
name = "execution_benchmarks"
harness = false
