[package]
name = "coh-gccp"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-NoeticanLabs-Proprietary"

[dependencies]
coh-core = { path = "../coh-core" }
coh-time = { path = "../coh-time" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
