[package]
name = "coh-npe"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
coh-core = { path = "../coh-core" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }

# Deterministic NPE mutation
rand = "0.8"
rand_chacha = "0.3"

# Serialization & Hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Optional NPE Libraries (enabled via features)
petgraph = { version = "0.6", optional = true }
egg = { version = "0.9", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
rayon = { version = "1", optional = true }
nalgebra = { version = "0.33", optional = true }
ndarray = { version = "0.16", optional = true }
z3 = { version = "0.9", optional = true }

[features]
default = []
npe-graph = ["petgraph"]
npe-rewrite = ["egg"]
npe-store = ["rusqlite"]
npe-parallel = ["rayon"]
npe-numeric = ["nalgebra", "ndarray"]
npe-smt = ["z3"]
npe-all = [
    "npe-graph",
    "npe-rewrite",
    "npe-store",
    "npe-parallel",
    "npe-numeric",
    "npe-smt",
]
