[package]
name = "coh-physics"
version = "0.1.0"
edition = "2021"

[dependencies]
num-complex = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
coh-core = { path = "../coh-core" }
num-traits = "0.2"
serde_json = "1.0"
