[package]
name = "coh"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "coh"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
coh-core = { path = "../coh-core" }
serde_json = { workspace = true }
serde = { workspace = true }
